--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,8 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/blog">Home</HeaderLink>
-			<HeaderLink href="/blog/posts">Posts</HeaderLink>
+			<HeaderLink href="/blog/">Home</HeaderLink>
+			<HeaderLink href="/blog/blog">Blog</HeaderLink>
 			<HeaderLink href="/blog/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
